client-budokan/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  @font-face {
    font-family: "Fredericka the Great";
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(/fonts/FrederickatheGreat-Regular.ttf) format("woff2");
  }

  :root {
    font-family: "Fredericka the Great", sans;
    user-select: none;
    --background: 0 0% 100%;
    --foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 47.4% 11.2%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 47.4% 11.2%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 100% 50%;
    --destructive-foreground: 210 40% 98%;

    --ring: 215 20.2% 65.1%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 224 71% 4%;
    --foreground: 213 31% 91%;

    --muted: 223 47% 11%;
    --muted-foreground: 215.4 16.3% 56.9%;

    --accent: 216 34% 17%;
    --accent-foreground: 210 40% 98%;

    --popover: 224 71% 4%;
    --popover-foreground: 215 20.2% 65.1%;

    --border: 216 34% 17%;
    --input: 216 34% 17%;

    --card: 224 71% 4%;
    --card-foreground: 213 31% 91%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 1.2%;

    --secondary: 222.2 47.4% 11.2%;
    --secondary-foreground: 210 40% 98%;

    --destructive: 0 63% 31%;
    --destructive-foreground: 210 40% 98%;

    --ring: 216 34% 17%;

    --radius: 0.5rem;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
    font-feature-settings:
      "rlig" 1,
      "calt" 1;
  }
}

img {
  user-drag: none;
  -webkit-user-drag: none;
  pointer-events: none;
}

.h-screen-viewport {
  height: calc(var(--vh, 1vh) * 100);
}

.game-container {
  touch-action: none; /* Prevents touch-based panning */
  overscroll-behavior: none; /* Prevents pull-to-refresh */
}

input,
textarea,
select {
  font-size: 16px !important;
} /* prevent zoom on mobile */

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

@keyframes wiggle {
  0%,
  100% {
    transform: translateX(0);
  }
  50% {
    transform: translateX(5px);
  }
}

@keyframes blink {
  0%,
  100% {
    opacity: 1;
  }
  50% {
    opacity: 0.5;
  }
}

.wiggle {
  animation: wiggle 0.2s ease-in-out infinite;
}

.blink {
  animation: blink 0.5s ease-in-out infinite;
}

.wiggle-blink {
  animation:
    wiggle 0.2s ease-in-out infinite,
    blink 0.5s ease-in-out infinite;
}

.wiggle {
  animation: wiggle 0.2s ease-in-out infinite;
}

.blink {
  animation: blink 0.5s ease-in-out infinite;
}

.wiggle-blink {
  animation:
    wiggle 0.2s ease-in-out infinite,
    blink 0.5s ease-in-out infinite;
}

::-webkit-scrollbar {
  width: 12px;
}

::-webkit-scrollbar-track {
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  background-color: #888;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #555;
}

/* Prevent pointer events on the controller when the dialog is open */
body[style*="pointer-events: none"] #controller {
  pointer-events: auto !important;
}

body[style*="pointer-events: none"] #controller * {
  pointer-events: auto !important;
}

.swiper {
  width: 280px;
  height: 400px;
}

.swiper-slide {
  display: flex;
  align-items: center;
  justify-content: center;
}

.hide-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.hide-scrollbar::-webkit-scrollbar {
  display: none;
}

